# Data-structures

./: CMakeLists.txt  README.md  main.cpp
Include/: doubleLinkedElement.hpp  doubleLinkedList.hpp  element.h  element.hpp  list.h  list.hpp  queue.hpp  queueElement.hpp  singlyLinkedElement.hpp  singlyLinkedList.hpp  stack.hpp  stackElement.hpp
Test/: listTest.cpp  singlyLinkedListTests.cpp
